# Stonnx

./: .gitignore  BENCHMARKS.md  Cargo.toml  MISSING_OPS.md  README.md  binding_test.c  build.rs  gen.py  inputs.json  make_opfile.py  reference.py  test_bindings.ps1  test_bindings.sh  test_c_bindings.ps1
.github/workflows/: rust.yml
bindings/c/: onnxrust_proto.h  stonnx.h
bindings/cpp/: stonnx.hpp
bindings/cs/: onnxrust_proto.cs  stonnx.cs
bindings/py/: onnxrust_proto.py  stonnx.py
bindings/tests/: test.c  test.cpp  test.cs  test.py
examples/: output.onnx  test.onnx
examples/mobilenet/test_data_set_0/: input_0.pb  output_0.pb
scripts/: download_models.ps1  download_models.sh  reference.py  test_bindings.ps1  test_bindings.sh
src/: lib.rs  main.rs  test.rs
src/common/: mod.rs
src/executor/: mod.rs
src/onnxparser/: mod.rs
src/operators/: _commonmatmul.rs  _commonpool.rs  add.rs  averagepool.rs  batchnormalization.rs  cast.rs  clip.rs  concat.rs  constant.rs  constantofshape.rs  conv.rs  div.rs  dropout.rs  exp.rs  flatten.rs  gather.rs  gemm.rs  globalaveragepool.rs  lrn.rs  matmul.rs  maxpool.rs  mod.rs  mul.rs  nonzero.rs  pow.rs  reducemean.rs  relu.rs  reshape.rs  shape.rs  slice.rs  softmax.rs  split.rs  sqrt.rs  squeeze.rs  sub.rs  sum.rs  tanh.rs  transpose.rs  unsqueeze.rs
src/parallel/: mod.rs
src/protograph/: mod.rs
src/protos/: onnx.proto
src/utils/: mod.rs  utils.rs
stonnx_ui/: README.md
stonnx_ui/src/: index.html  main.js  styles.css
stonnx_ui/src-tauri/: Cargo.toml  tauri.conf.json
stonnx_ui/src-tauri/icons/: icon.icns
stonnx_ui/src-tauri/src/: main.rs
