[package]
name = "onnxrust_proto"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = 1

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
clap = { version = "4.4.8", features = ["derive"] }
half = "2.3.1"
ndarray = "0.15.6"
num = "0.4.1"
once_cell = "1.18.0"
protobuf = "3.2.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
trait-set = "0.3.0"
walkdir = "2.3.3"

[build-dependencies]
protobuf = "3.2.0"
protobuf-codegen = "3.2.0"
protoc-bin-vendored = "3.0.0"
