[package]
name = "stonnx"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
custom-threadpool = []

[profile.release]
debug = 1

[lib]
name = "stonnx_api"
crate-type = ["cdylib"]

[[bin]]
name = "stonnx"

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
bytemuck = { version = "1.14.0", features = ["derive"] }
clap = { version = "4.4.8", features = ["derive"] }
half = "2.3.1"
itertools = "0.12.0"
lazy_static = "1.4.0"
ndarray = { version = "0.15.6", features = ["rayon"] }
ndarray-ndimage = "0.4.0"
ndarray-npy = "0.8.1"
ndarray-stats = "0.5.1"
num = "0.4.1"
once_cell = "1.18.0"
petgraph = { version = "0.6.4", features = ["serde-1"] }
protobuf = "3.2.0"
rand = "0.8.5"
rayon = "1.8.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
smallvec = "1.11.2"
trait-set = "0.3.0"
walkdir = "2.3.3"

[build-dependencies]
protobuf = "3.2.0"
protobuf-codegen = "3.2.0"
protoc-bin-vendored = "3.0.0"
curl = "0.4.44"
zip = "0.6"
zip-extensions = "0.6.2"