[package]
name = "stonnx_ui"
version = "0.0.1"
description = "A UI runner for Stonnx"
authors = ["Atari2"]
license = "MIT"
repository = "https://github.com/Atari2/Stonnx/stonnx_ui"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "path-all", "dialog-open", "dialog-save", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
ndarray = { version = "0.15.6", features = [ "serde-1" ] }
serde_json = "1.0"
stonnx = "0.1.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
